--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,34 @@
-#navbar{
+#navbar {
     position: sticky;
-	top: 0;
-	background-color: #0ed1c1;
-	margin:auto;
-	width: auto;
-	z-index: 1;
+    top: 0;
+    background-color: #0ed1c1;
+    margin: auto;
+    width: auto;
+    z-index: 1;
     color: #f7f7f7;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
 
 /* Navblock*/
-#logo{
+#logo {
     margin-left: 1rem;
 }
-#cName{
-    display:inline-block;
-    font-family:"Rounded Mplus 1b";
+
+#cName {
+    display: inline-block;
+    font-family: "Rounded Mplus 1b";
     font-size: 1.35rem;
     letter-spacing: 0.3rem;
     margin: auto;
     margin-left: 0.5rem;
-    position:absolute;
-    top:25%;
+    position: absolute;
+    top: 25%;
 }
-#navblock{
-    position:absolute;
-    display:table;
+
+#navblock {
+    position: absolute;
+    display: table;
     margin: auto;
     width: 50%;
     text-align: center;
@@ -34,22 +36,50 @@
     top: 25%;
     /* transform: translate(-50%, -50%); */
 }
-.navItem{
+
+.dropdown {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 12px 16px;
+    z-index: 200;
+}
+
+#login:hover .dropdown {
+    display: block;
+}
+/* hover property in https://css-tricks.com/cool-hover-effects-using-background-properties/ hover-2*/
+.navItem {
+    padding: 0.625rem 0.625rem;
+    text-align: center;
     padding-left: 2rem;
     padding-right: 2rem;
     text-decoration: none;
     color: #f7f7f7;
-    font-family:"Rounded Mplus 1m";
+    font-family: "Rounded Mplus 1m";
     font-size: 1rem;
+    background:
+        linear-gradient(#04dac8 0 0) no-repeat calc(200% - var(--p, 0%)) 100% / 200% var(--p, .08em);
+    transition: .3s var(--t, 0s), background-position .3s calc(.3s - var(--t, 0s));
 }
-#navhr{
+
+.navItem:hover {
+    position: unset;
+    --p: 100%;
+    --t: .3s;
+    color: #fff;
+}
+
+#navhr {
     /* color:rgba(255, 255, 255, 0.459); */
     border: 0.1px solid rgba(255, 255, 255, 0.37);
     width: 100%;
 }
 
 /* Monk Content Manipulation */
-#monkContent{
+#monkContent {
     width: 100%;
     object-fit: cover;
     overflow: hidden;
