Completed Navbar Smoothly

--- a/src/style.css
+++ b/src/style.css
@@ -34,32 +34,19 @@
     text-align: center;
     left: 25%;
     top: 25%;
-    /* transform: translate(-50%, -50%); */
-}
-
-.dropdown {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 16px;
-    z-index: 200;
-}
-
-#login:hover .dropdown {
-    display: block;
+    margin-bottom: 0%;
 }
 /* hover property in https://css-tricks.com/cool-hover-effects-using-background-properties/ hover-2*/
 .navItem {
-    padding: 0.625rem 0.625rem;
     text-align: center;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-bottom: 1.25rem;
+    padding-left: 5%;
+    padding-right: 5%;
     text-decoration: none;
     color: #f7f7f7;
     font-family: "Rounded Mplus 1m";
     font-size: 1rem;
+    border: none;
     background:
         linear-gradient(#04dac8 0 0) no-repeat calc(200% - var(--p, 0%)) 100% / 200% var(--p, .08em);
     transition: .3s var(--t, 0s), background-position .3s calc(.3s - var(--t, 0s));
@@ -70,12 +57,51 @@
     --p: 100%;
     --t: .3s;
     color: #fff;
+    /* border-bottom-style: solid;
+    border-bottom-color: #f7f7f7;
+    border-bottom-width: 1.5px; */
+}
+#dropdown{
+    position: absolute;
+    width: 100rem;
+    left: 50%;
+    visibility:hidden;
 }
 
+.dropdownBs{
+    display: block;
+    text-align: center;
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
+    padding-left: 5%;
+    padding-right: 5%;
+    size-adjust:unset;
+    text-decoration: none;
+    color: #f7f7f7;
+    font-family: "Rounded Mplus 1m";
+    font-size: 1rem;
+    border: none;
+    background-color: #0ed1c1;
+}
+
+
 #navhr {
-    /* color:rgba(255, 255, 255, 0.459); */
-    border: 0.1px solid rgba(255, 255, 255, 0.37);
+    border: 0.01px solid rgba(255, 255, 255, 0.37);
     width: 100%;
+}
+#nomadHr{
+    display: block;
+    position: absolute;
+    border:1.1px #f7f7f7 solid;
+    width:16%;
+    top:2.75rem;
+    margin-left: 15%;
+    left:0%; /*Add or remove 17.5%*/
+    z-index: 100;
+    /* left:32.5%; */
+}
+#sign-up:hover #nomadHr{
+    transform: translateX(32.5%);
 }
 
 /* Monk Content Manipulation */
@@ -83,4 +109,5 @@
     width: 100%;
     object-fit: cover;
     overflow: hidden;
+    z-index: -1;
 }
